[package]
name = "try_from_expr"
version = "0.1.0"
edition = "2024"
authors = ["Jakob Lochinski"]
description = "A procedural macro for generating TryFrom<&syn::Expr> implementations for enums"
license = "MIT"
repository = "https://github.com/rymskip/try_from_expr"
keywords = ["syn", "parser", "macro", "derive", "expr"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

[lib]
path = "src/lib.rs"

[dependencies]
ordered-float = { version = "5.0.0", features = ["serde"] }
syn = { workspace = true }
try_from_expr_derive = { version = "0.1.0", path = "../try_from_expr_derive" }
